Fixed the gap between containers

--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
 
 body,
 html {
-  height: 100%;
-  margin: 0;
+  height: 100%
+
 }
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
+    
     
 }
 
+
+
+
+
+
+
+
+ 
     .sidebar {
-        background-color: rgb(130, 130, 184);
+        background-color: #1992d4;
 
 
         display: grid;
@@ -42,7 +51,8 @@ html {
 
     .right-side-container {
         display: grid;
-        grid-column: 1/3;
+
+        grid-column: 2/3;
         grid-row: 1/3;
 
         grid-template-rows: 1fr 5fr;
@@ -51,11 +61,13 @@ html {
 
     }
 
-        header {
+        .header {
             background-color: aqua;
 
+
+
             display: grid;
-            grid-column: 2/3;
+            grid-column: 1/3;
             grid-row: 1/2;
 
             grid-template-rows: 1fr 1.5fr;
@@ -143,10 +155,10 @@ html {
         main {
             background-color: brown;
             display: grid;
-            grid-column: 2/3;
+            grid-column: 1/3;
             grid-row: 2/3;
 
-            grid-template-columns: 3fr 1fr;
+            grid-template-columns: 4fr 1fr;
             
             
         }
@@ -157,7 +169,7 @@ html {
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
                 grid-template-rows: repeat(3, 1fr);
-                
+
             }
 
             .media {
